--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compression": "^1.7.3",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.3.0",
     "material-ui": "^0.20.2",
     "mysql2": "^1.6.1",
     "react": "^16.4.2",
