--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-boilerplate",
+  "name": "DoctorJS",
   "version": "1.0.0",
   "description": "Modern React boilerplate",
   "main": "Index.js",
-  "repository": "https://github.com/BrunoTorresF/react-boilerplate",
-  "author": "Bruno Torres",
+  "repository": "https://github.com/KatiesCode/DoctorJS",
+  "author": "KatiesCode",
   "license": "MIT",
   "scripts": {
     "dev": "webpack --config webpack.config.js --watch --mode development",
@@ -13,14 +13,16 @@
     "build": "webpack --config webpack.config.prod.js --mode production"
   },
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
+    "canvasjs": "^1.8.1",
     "compression": "^1.7.3",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
-    "material-ui": "^0.20.2",
+    "material-ui": "^0.20.1",
     "mysql2": "^1.6.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
