--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,5 @@
     ],
     "@babel/react"
   ],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
