--- a/package.json
+++ b/package.json
@@ -14,21 +14,26 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.2.2",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
     "canvasjs": "^1.8.1",
+    "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "express": "^4.16.3",
+    "history": "^4.7.2",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
     "material-ui": "^0.20.1",
     "mysql2": "^1.6.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-tap-event-plugin": "^3.0.3"
+    "react-tap-event-plugin": "^3.0.3",
+    "recharts": "^1.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
