--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,8 @@
     ],
     "@babel/react"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-dynamic-import"
+  ]
 }
