--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
     "material-ui": "^0.20.1",
+    "mdbreact": "^4.8.1",
     "mysql2": "^1.6.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
