--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "DoctorJS",
   "version": "1.0.0",
-  "description": "Modern React boilerplate",
+  "description": "An app to help you keep track of your sugar and pressure levels",
   "main": "Index.js",
   "repository": "https://github.com/KatiesCode/DoctorJS",
   "author": "KatiesCode",
@@ -18,7 +18,6 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
-    "canvasjs": "^1.8.1",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "express": "^4.16.3",
@@ -33,7 +32,6 @@
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-tap-event-plugin": "^3.0.3",
     "recharts": "^1.3.4"
   },
   "devDependencies": {
